refactor: remove CLI flow and switch to REST API mode